[package]
name = "affinidi-messaging-helpers"
version = "0.11.1"
description = "Affinidi Messaging Helpers"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "setup_environment"
path = "src/setup_environment/main.rs"

[[bin]]
name = "mediator_administration"
path = "src/mediator_administration/main.rs"

[[bin]]
name = "generate_mediator_config"
path = "src/generate_mediator_config/main.rs"

[dependencies]
# Affinidi Crates
affinidi-did-resolver-cache-sdk = { workspace = true, features = [
  "did_example",
] }
affinidi-did-common.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-messaging-sdk.workspace = true
affinidi-tdk.workspace = true
affinidi-did-key.workspace = true
did-peer.workspace = true

ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "pem",
] }
regex = "1.12"
reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
ring = { version = "0.17", features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
time = "0.3"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }
uuid = { version = "1.18", features = ["v4", "fast-rng"] }

[dev-dependencies]
affinidi-tdk.workspace = true
affinidi-did-authentication.workspace = true
