[package]
name = "affinidi-messaging-helpers"
version = "0.11.10"
description = "Affinidi Messaging Helpers"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "setup_environment"
path = "src/setup_environment/main.rs"

[[bin]]
name = "mediator_administration"
path = "src/mediator_administration/main.rs"

[[bin]]
name = "generate_mediator_config"
path = "src/generate_mediator_config/main.rs"

[dependencies]
# Affinidi Crates
affinidi-did-resolver-cache-sdk = { version = "0.7", features = [
  "did_example",
] }
affinidi-did-common = "0.3"
affinidi-messaging-didcomm = "0.11"
affinidi-messaging-sdk = "0.14"
affinidi-tdk = "0.4"

ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "pem",
] }
regex = "1.12"
reqwest = { version = "0.13", features = ["rustls", "json"] }
ring = { version = "0.17", features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
time = "0.3"
tokio = { version = "1.49", features = ["full"] }
toml = "1.0"
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }
uuid = { version = "1.21", features = ["v4", "fast-rng"] }
