[package]
name = "affinidi-messaging-helpers"
version = "0.12.0"
description = "Affinidi Messaging Helpers"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "setup_environment"
path = "src/setup_environment/main.rs"

[[bin]]
name = "mediator_administration"
path = "src/mediator_administration/main.rs"

[[bin]]
name = "generate_mediator_config"
path = "src/generate_mediator_config/main.rs"

[dependencies]
# Affinidi Crates
affinidi-did-resolver-cache-sdk = { version = "0.8", features = [
  "did_example",
], path = "../../affinidi-did-resolver/affinidi-did-resolver-cache-sdk" }
affinidi-did-common = { version = "0.3", path = "../../affinidi-did-resolver/affinidi-did-common" }
affinidi-messaging-didcomm = { version = "0.12", path = "../affinidi-messaging-didcomm" }
affinidi-messaging-sdk = { version = "0.15", path = "../affinidi-messaging-sdk" }
affinidi-tdk = { version = "0.5", path = "../../affinidi-tdk/affinidi-tdk" }

ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "pem",
] }
regex = "1.12"
reqwest = { version = "0.13", features = ["rustls", "json"] }
ring = { version = "0.17", features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
time = "0.3"
tokio = { version = "1.49", features = ["full"] }
toml = "1.0"
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }
uuid = { version = "1.21", features = ["v4", "fast-rng"] }
