[package]
name = "affinidi-messaging-mediator"
version = "0.12.0"
description = "DIDComm Mediator service for Affinidi Messaging"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "mediator"
path = "src/main.rs"

[dependencies]
# Affinidi Crates
affinidi-messaging-sdk = "0.15"
affinidi-messaging-didcomm = "0.12"
affinidi-messaging-mediator-processors = "0.12"
affinidi-messaging-mediator-common = "0.12"
affinidi-did-resolver-cache-sdk = { version = "0.8", features = ["network"] }
affinidi-did-common = "0.3"
affinidi-secrets-resolver = "0.5"

# External Crates
ahash = { version = "0.8", features = ["serde"] }
async-convert = "1"
aws-config = "1.8"
aws-sdk-secretsmanager = "1.98"
aws-sdk-ssm = "1.102"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
chrono = "0.4"
deadpool-redis = { version = "0.22", features = ["rt_tokio_1"] }
hostname = "0.4"
http = "1"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
itertools = "0.14"
num-format = "0.4.4"
rand = "0.10"
# Redis can only be updated when deadpool-redis supports the new version
redis = { version = "0.32", features = [
  "tokio-rustls-comp",
  "tls-rustls-insecure",
  "ahash",
] }
regex = "1.12"
ring = { version = "0.17", features = ["std"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
subtle = "2.6"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
toml = "1"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }
uuid = { version = "1.21", features = ["v4", "fast-rng"] }

[dev-dependencies]
console = "0.16"
dialoguer = "0.12"
lazy_static = "1.5"
reqwest = { version = "0.13", features = ["rustls", "json"] }
