[package]
name = "affinidi-messaging-sdk"
version = "0.13.0"
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Affinidi Crates
affinidi-tdk-common.workspace = true
affinidi-messaging-didcomm.workspace = true
affinidi-did-authentication.workspace = true
affinidi-did-common.workspace = true

# External Crates
ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
futures-util = "0.3"
regex = "1.12"
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tracing = { version = "0.1", features = ["valuable"] }
uuid = { version = "1.19", features = ["v4", "fast-rng"] }

[dev-dependencies]
did-peer.workspace = true

clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
rand = "0.9"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "pem",
] }
regex = "1.12"
ring = { version = "0.17", features = ["std"] }
time = "0.3"
