[package]
name = "affinidi-messaging-sdk"
version = "0.15.0"
description = "Affinidi Messaging SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Affinidi Crates
affinidi-tdk-common = { version = "0.4", path = "../../affinidi-tdk/common/affinidi-tdk-common" }
affinidi-messaging-didcomm = { version = "0.12", path = "../affinidi-messaging-didcomm" }
affinidi-did-authentication = { version = "0.3", path = "../../affinidi-tdk/common/affinidi-did-authentication" }
affinidi-did-common = { version = "0.3", path = "../../affinidi-did-resolver/affinidi-did-common" }

# External Crates
ahash = { version = "0.8", features = ["serde"] }
base64 = "0.22"
futures-util = "0.3"
regex = "1.12"
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha256 = "1.6"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tracing = { version = "0.1", features = ["valuable"] }
uuid = { version = "1.21", features = ["v4", "fast-rng"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
rand = "0.10"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "pem",
] }
regex = "1.12"
ring = { version = "0.17", features = ["std"] }
time = "0.3"
