[package]
name = "affinidi-tdk"
version = "0.3.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging", "meeting-place", "did-peer", "data-integrity"]
messaging = ["dep:affinidi-messaging-sdk"]
meeting-place = ["dep:affinidi-meeting-place"]
did-peer = ["dep:did-peer"]
data-integrity = ["dep:affinidi-data-integrity", "dep:serde"]

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
affinidi-did-common.workspace = true
affinidi-messaging-sdk = { workspace = true, optional = true }
affinidi-messaging-didcomm.workspace = true
affinidi-did-authentication.workspace = true
affinidi-tdk-common.workspace = true
affinidi-secrets-resolver.workspace = true
affinidi-meeting-place = { workspace = true, optional = true }
did-peer = { workspace = true, optional = true }
affinidi-did-key.workspace = true
affinidi-data-integrity = { workspace = true, optional = true }

# External Crates
clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
