[package]
name = "affinidi-tdk"
version = "0.5.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging", "meeting-place", "did-peer", "data-integrity"]
messaging = ["dep:affinidi-messaging-sdk"]
meeting-place = ["dep:affinidi-meeting-place"]
did-peer = []
data-integrity = ["dep:affinidi-data-integrity", "dep:serde"]

[dependencies]
affinidi-did-resolver-cache-sdk = { version = "0.8", path = "../../affinidi-did-resolver/affinidi-did-resolver-cache-sdk" }
affinidi-did-common = { version = "0.3", path = "../../affinidi-did-resolver/affinidi-did-common" }
affinidi-messaging-sdk = { version = "0.15", optional = true, path = "../../affinidi-messaging/affinidi-messaging-sdk" }
affinidi-messaging-didcomm = { version = "0.12", path = "../../affinidi-messaging/affinidi-messaging-didcomm" }
affinidi-did-authentication = { version = "0.3", path = "../common/affinidi-did-authentication" }
affinidi-tdk-common = { version = "0.4", path = "../common/affinidi-tdk-common" }
affinidi-secrets-resolver = { version = "0.5", path = "../common/affinidi-secrets-resolver" }
affinidi-crypto = { version = "0.1", path = "../common/affinidi-crypto" }
affinidi-meeting-place = { version = "0.3", optional = true, path = "../../affinidi-meeting-place" }
affinidi-data-integrity = { version = "0.3", optional = true, path = "../common/affinidi-data-integrity" }

# External Crates
clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }

[lints]
workspace = true
