[package]
name = "affinidi-tdk"
version = "0.5.1"
description.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging", "meeting-place", "did-peer", "data-integrity"]
messaging = ["dep:affinidi-messaging-sdk"]
meeting-place = ["dep:affinidi-meeting-place"]
did-peer = []
data-integrity = ["dep:affinidi-data-integrity", "dep:serde"]

[dependencies]
affinidi-did-resolver-cache-sdk = "0.8"
affinidi-did-common = "0.3"
affinidi-messaging-sdk = { version = "0.15", optional = true }
affinidi-messaging-didcomm = "0.12"
affinidi-did-authentication = "0.3"
affinidi-tdk-common = "0.4"
affinidi-secrets-resolver = "0.5"
affinidi-crypto = "0.1"
affinidi-meeting-place = { version = "0.3", optional = true }
affinidi-data-integrity = { version = "0.4", optional = true }

# External Crates
clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }

[lints]
workspace = true
