[package]
name = "affinidi-cesr"
description = "CESR (Composable Event Streaming Representation) encoding and decoding"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[lints]
workspace = true
