[package]
name = "affinidi-secrets-resolver"
description = "Common utilities for Affinidi Trust Development Kit."
version = "0.5.3"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish = false
rust-version.workspace = true

[features]
default = ["p256", "k256", "p384", "ed25519"]
p256 = ["affinidi-crypto/p256"]
k256 = ["affinidi-crypto/k256"]
p384 = ["affinidi-crypto/p384"]
ed25519 = ["affinidi-crypto/ed25519"]

[dependencies]
affinidi-crypto = "0.1"
affinidi-encoding = "0.1"
ahash = "0.8"
base58 = "0.2"
base64 = "0.22"
multibase = "0.9"
rand = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
thiserror = "2"
unsigned-varint = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# This can be updated to 0.3 when other dependencies are updated to getrandom 0.3 (mainly ed25519-dalek crate)
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
