[package]
name = "affinidi-data-integrity"
description = "W3C Data Integrity Implementation"
version = "0.5.4"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
bbs-2023 = ["dep:affinidi-bbs"]
# Post-quantum cryptography (experimental — W3C di-quantum-safe v0.3).
# Off by default.
post-quantum = ["ml-dsa", "slh-dsa"]
ml-dsa = ["affinidi-crypto/ml-dsa", "affinidi-secrets-resolver/ml-dsa"]
slh-dsa = ["affinidi-crypto/slh-dsa", "affinidi-secrets-resolver/slh-dsa"]

[dependencies]
affinidi-crypto = "0.1"
affinidi-rdf-encoding = { version = "0.1", path = "../affinidi-rdf-encoding" }
affinidi-secrets-resolver = "0.5"
affinidi-did-common = "0.3"
affinidi-bbs = { version = "0.1", path = "../../core/affinidi-bbs", optional = true }

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.2"
multibase = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
zeroize = "1.8"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "valuable",
] }

[[bench]]
name = "proof_benchmarks"
harness = false

[[example]]
name = "remote_signer_ml_dsa"
required-features = ["ml-dsa"]

[[example]]
name = "sign_multi_hybrid"
required-features = ["ml-dsa"]
