[package]
name = "affinidi-mdoc"
description = "ISO/IEC 18013-5 mdoc (Mobile Document) implementation for mobile driving licences and eIDAS attestations."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords = ["ssi", "affinidi", "mdoc", "iso18013", "eidas"]
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ciborium = "0.2"
coset = "0.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
